fix footer centering on mobile

--- a/site/main.css
+++ b/site/main.css
@@ -1,23 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');
 
-/* *, *::after, *::before {
-    font-family: 'PT Mono', monospace;
-    
-} */
+*, *::after, *::before {
+    /* font-family: 'PT Mono', monospace; */
+    box-sizing:border-box;
+}
 
 .container {
     position:relative;
     min-height:98vh;
+    padding:0px;
 }
 
 .main-section {
     padding-top:10rem;
     padding-bottom:8rem;
+    padding-left:10px;
+    padding-right:10px;
     font-family: 'Lexend Deca', sans-serif;
 }
 
 .footer-section {
     position: absolute;
+    padding:0px;
     bottom: 0;
     width: 100%;
     height: 5rem;            /* Footer height */
